# The-LLM-Court-Backend

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run.sh
.github/workflows/: deploy.yml
src/app/: main.py
src/app/api/: auth_deps.py  deps.py
src/app/api/v1/: router.py
src/app/api/v1/routes/: add_user_temp.py  chats.py  court.py  court_streaming.py  get_user.py  health.py  login.py  logout.py  personal_chat_history.py  register.py
src/app/api/v1/routes/google_oauth/: google_callback.py  google_login.py
src/app/clients/: openrouter.py
src/app/core/: config.py
src/app/core/prompts/: stage1_prompts.py  stage2_prompts.py  stage3_prompts.py  stage4_prompts.py  stage5_prompts.py
src/app/repositories/: case_store.py
src/app/schemas/: court.py
src/app/services/: court_service.py
src/app/services/Jwt_files/: jwt_exceptions.py  jwt_services.py
src/app/services/authentication/: authentication_service.py  exceptions.py  login_services.py  register_service.py
src/app/services/google_oauth_service/: google_oauth_services.py  google_oauth_services_exception.py
